# omniverse-labs

./: AGENTS.md  LICENSE  README.md
projects/nanousd-labs/nanousd/: .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  README.md
projects/nanousd-labs/nanousd-metal-renderer/: .gitignore  CMakeLists.txt  PLAN.md  README.md  build.sh  run.sh
projects/nanousd-labs/nanousd-metal-renderer/comparisons/: .gitignore  README.md  flip_pipeline.py  render_backend_comparison.py
projects/nanousd-labs/nanousd-metal-renderer/include/: nusd_renderer.h
projects/nanousd-labs/nanousd-metal-renderer/python/: pyproject.toml
projects/nanousd-labs/nanousd-metal-renderer/src/: camera.c  dlss.h  dlss_stub.c  gpu.h  gpu_metal.mm  gs_scene.c  gs_scene.h  material.cpp  material.h  material_stub.cpp  mdl_bridge.cpp  primitive_geom.c  primitive_geom.h  renderer.c  scene.c  scene.h
projects/nanousd-labs/nanousd-metal-renderer/test/: basicCurves.usda  bench_raw_vs_detile.py  bench_tiled_comprehensive.py  bench_zerocopy_breakdown.py  test_detile_kernel.py  test_gaussian_render.c  test_headless_render.c  test_ovrtx_metal_api.py  test_scene_curves.c  test_scene_lights.c  test_tiled_pixel_validation.py  test_tiled_render.py  test_tiled_stress.py  test_tiled_training_sim.py  test_tlas_update.py  test_viewer_metal.py  test_viewer_vulkan.py  textured_quad.usda
projects/nanousd-labs/nanousd-opengl-renderer/: .gitignore  CMakeLists.txt  README.md  build.sh  compare_viewers.py  run.sh  test_cube.usda  test_materials.usda  test_mdl_generic.mdl  test_mdl_generic.usda  test_pbr_materials.usda
projects/nanousd-labs/nanousd-opengl-renderer/comparisons/: README.md  flip_compare.py  flip_pipeline.py  render_backend_comparison.py
projects/nanousd-labs/nanousd-opengl-renderer/include/: nusd_renderer.h
projects/nanousd-labs/nanousd-opengl-renderer/scripts/: adapter_diff.py  bench_usd.py  capture_chess_opengl.py  compare.py  curves_smoketest.py  render_usd.py  run_extensive_compare.py
projects/nanousd-labs/nanousd-opengl-renderer/src/: arena.h  cgl_headless.c  egl_headless.c  egl_headless.h  font8x16.h  geo_cache.c  geo_cache.h  gl_thread.c  gl_thread.h  gpu.h  gpu_opengles.c  material.c  material.h  material_mtlx.cpp  mdl_bridge.cpp  mdl_bridge.h  nu_parallel.cpp  nu_parallel.h  nu_renderer_shim.c  scene.c  scene.h  shaders_gles.h  viewer.c  viewer.h  viewer_internal.h
projects/nanousd-labs/nanousd-opengl-renderer/tests/: capsule_test.c  compare_smoke.sh  cull_stats.c  curves_compare.py  curves_smoketest.c  dedup_render_gate.c  determinism_test.c  geo_cache_render_smoke.c  geo_cache_test.c  gprim_test.c  mdl_material_test.c  meshlet_draw_test.c  mtlx_usd_uvtiling_test.c  python_bindings_test.py  scene_skin_test.c  scene_test.c  xform_correctness_test.c
projects/nanousd-labs/nanousd-python/: .gitignore  CMakeLists.txt  NOTICE  README.md  build.sh  pyproject.toml
projects/nanousd-labs/nanousd-python/src/: bindings.cpp
projects/nanousd-labs/nanousd-python/tests/: conformance_baseline.json  conformance_report.md  instancing_conformance_report.md  openusd_schema_conformance_report.md  stage_conformance_report.md  test_basic.py  test_instancing_conformance.py  test_matrix_rotation_conformance.py  test_native_api.py  test_openusd_copied_subset.py  test_openusd_schema_conformance.py  test_pxr_compat_api.py  test_stage_conformance.py  test_usdphysics_conformance.py
projects/nanousd-labs/nanousd-vulkan-renderer/: .gitignore  CMakeLists.txt  NOTICE  README.md  build.sh  run.sh
projects/nanousd-labs/nanousd-vulkan-renderer/.githooks/: pre-commit
projects/nanousd-labs/nanousd-vulkan-renderer/cmake/: SlangShaders.cmake
projects/nanousd-labs/nanousd-vulkan-renderer/comparisons/: .gitignore  README.md  flip_pipeline.py  render_backend_comparison.py  semantic_diff.py
projects/nanousd-labs/nanousd-vulkan-renderer/include/: nusd_renderer.h
projects/nanousd-labs/nanousd-vulkan-renderer/python/: pyproject.toml
projects/nanousd-labs/nanousd-vulkan-renderer/scripts/: _nanousdview_ovrtx_render.py  audit_moana_storm_vs_vulkan_geometry.py  capture_chess_modes.py  debug_curve_drawing_fixture.py  profile_moana_orbit_visibility_modes.py  render_moana_backend_1080_report.py  render_moana_camera_contact_sheet.py  render_moana_small_asset_ovrtx_vulkan_compare.py  render_moana_small_asset_storm_vulkan_compare.py  setup_hooks.sh  validate_geo_cache.sh
projects/nanousd-labs/nanousd-vulkan-renderer/src/: arena.h  camera.c  camera.h  geo_cache.c  geo_cache.h  gpu.h  gpu_vulkan.c  gs_scene.c  gs_scene.h  material.cpp  material.h  ptex_material.cpp  ptex_material.h  renderer.c  scene.c  scene.h
projects/nanousd-labs/nanousd-vulkan-renderer/test/: bench_async_render.py  bench_cuda_readback.py  bench_no_swizzle.py  bench_readback.py  bench_render.py  bench_tlas_update.py  geo_cache_meshlet_test.c  geo_cook.c  mdl_material_test.c  phase_c1_bench.py  phase_c1_validate.py  phase_c2_validate.py  phase_c3_validate.py  phase_c4_bench_path_tile_check.py  phase_c4_validate.py  test_async_correctness.py  test_capsule.c  test_cuda_interop.py  test_detile_kernel.py  test_gprim.c  test_headless_render.c  test_ironwood_native_curves.c  test_moana_curve_assets.c  test_mtlx_usd_uvtiling.c  test_native_instance_curves.c  test_normal_matrix.c  test_scene_curve_basis.c  test_scene_curves.c  test_scene_instance_transform.c  test_scene_skin.c  test_scene_xform.c  test_tiled_edge_cases.py  test_tiled_render.py  test_tiled_training_sim.py  test_tlas_update.py  test_viewer_vulkan.py
projects/nanousd-labs/nanousd-vulkan-renderer/tools/: ply_to_usd.py  windows_smoke.ps1
projects/nanousd-labs/nanousd/cmake/: nanousdConfig.cmake.in
projects/nanousd-labs/nanousd/skills/: README.md
projects/nanousd-labs/nanousd/src/: asset_resolver.cpp  clips.cpp  compose.cpp  diagnostic.cpp  lz4_decode.cpp  lz4_decode.h  mmap_handle.h  nanousd_backend.cpp  nanousdapi.cpp  path.cpp  path_pool.cpp  path_pool.h  relative_path.cpp  resource.cpp  schema.cpp  (+15 more)
projects/nanousd-labs/nanousdview/: .gitignore  CMakeLists.txt  NOTICE  README.md  build.sh  run.sh  test_cube.usda
(+1064 files in other folders)
